kubernetes/apps/monitoring/uptime-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
      targetPort: http
      name: http
  type: ClusterIP
