kubernetes/apps/monitoring/uptime-kuma/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`uptime.pxldi.de`)
      middlewares:
        - name: internal-only
          namespace: traefik
        - name: authentik-forward-auth
          namespace: traefik
      priority: 10
      services:
        - name: uptime-kuma
          port: 3001
    - kind: Rule
      match: "Host(`uptime.pxldi.de`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: 9000
